Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>MSDK by msdk</title>
+    <meta name="description" content="MSDK : Mass Spectrometry Development Kit">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>MSDK</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>MSDK</h1>
-        <p>Mass Spectrometry Development Kit</p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/msdk">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/msdk">View My GitHub Profile</a></p>
+          <h1 id="project_title">MSDK</h1>
+          <h2 id="project_tagline">Mass Spectrometry Development Kit</h2>
 
-      </header>
-      <section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK</h3>
 
@@ -50,7 +54,7 @@
 <p>under the terms of the GNU <a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">Lesser General Public License version 2.1</a> as published by the Free Software Foundation.</p>
 
 <h3>
-<a id="how-to-join" class="anchor" href="#how-to-join" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to join</h3>
+<a id="how-to-join-this-project" class="anchor" href="#how-to-join-this-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to join this project</h3>
 
 <p>Please join our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a>.</p>
 
@@ -62,11 +66,16 @@
 <pre><code>$ git clone https://github.com/msdk/msdk.git
 </code></pre>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
