Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK</h3>
+<a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK?</h3>
 
 <p>MSDK is a Java library of algorithms for processing mass spectrometry data. The goals of the library are to provide a flexible data model with Java interfaces for mass-spectrometry related objects (including raw spectra, processed data sets, identification results etc.) and to integrate the existing algorithms that are currently scattered around various Java-based graphical tools, such as</p>
 
@@ -43,6 +43,11 @@
 <li><a href="https://code.google.com/p/proteo-suite/">ProteoSuite</a></li>
 <li><a href="http://bio.informatik.uni-jena.de/sirius2/">SIRIUS</a></li>
 </ul>
+
+<h3>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h3>
+
+<p>Please use the <a href="https://github.com/msdk/msdk/graphs/contributors">Github's statistics</a> to see who has contributed to this project so far.</p>
 
 <h3>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h3>
@@ -61,7 +66,7 @@
 <h3>
 <a id="source-codes" class="anchor" href="#source-codes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Source codes</h3>
 
-<p>MSDK source codes are available at our <a href="https://github.com/msdk/msdk">Github repository</a>. To clone the source code tree. you can use this command:</p>
+<p>MSDK source codes are available from our <a href="https://github.com/msdk/msdk">Github repository</a>. To clone the source code tree. you can use this command:</p>
 
 <pre><code>$ git clone https://github.com/msdk/msdk.git
 </code></pre>
