Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 </ul>
 
 <h3>
+<a id="platform" class="anchor" href="#platform" aria-hidden="true"><span class="octicon octicon-link"></span></a>Platform</h3>
+
+<p>MSDK requires Java runtime (JRE) version 1.7 or newer.</p>
+
+<h3>
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h3>
 
 <p>Please use the <a href="https://github.com/msdk/msdk/graphs/contributors">Github's statistics</a> to see who has contributed to this project so far.</p>
