Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>
 <a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK?</h3>
 
-<p>MSDK is a Java library of algorithms for processing mass spectrometry data. The goals of the library are to provide a flexible data model with Java interfaces for mass-spectrometry related objects (including raw spectra, processed data sets, identification results etc.) and to integrate the existing algorithms that are currently scattered around various Java-based graphical tools, such as</p>
+<p>MSDK is a Java library of algorithms for processing mass spectrometry data. The goals of the library are to provide a flexible data model with Java interfaces for mass-spectrometry related objects (including raw spectra, processed data sets, identification results etc.) and to integrate the existing algorithms that are currently scattered around various Java-based graphical tools, such as (in alphabetical order)</p>
 
 <ul>
 <li><a href="https://code.google.com/p/guineu/">Guineu</a></li>
