--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
         <h3>
 <a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK?</h3>
 
-<p>MSDK is a Java library of algorithms for processing mass spectrometry data. The goals of the library are to provide a flexible data model with Java interfaces for mass-spectrometry related objects (including raw spectra, processed data sets, identification results etc.) and to integrate the existing algorithms that are currently scattered around various Java-based graphical tools, such as (in alphabetical order)</p>
+<p>MSDK is a Java library of algorithms for processing mass spectrometry data. The goals of the library are to provide a flexible data model with Java interfaces for mass-spectrometry related objects (including raw spectra, processed data sets, identification results etc.) and to integrate the existing algorithms that are currently scattered around various Java-based graphical tools, such as (in alphabetical order):</p>
 
 <ul>
 <li><a href="https://code.google.com/p/guineu/">Guineu</a></li>
 <li><a href="http://software.iab.keio.ac.jp/jdamp/">JDAMP</a></li>
+<li><a href="http://maltcms.sourceforge.net">Maltcms</a></li>
 <li><a href="https://bitbucket.org/sbeisken/masscascade/">MassCascade</a></li>
+<li><a href="http://bimsbstatic.mdc-berlin.de/kempa/software/kempaSoftware.html">Maui-VIA</a></li>
+<li><a href="http://proteomics.fhcrc.org/CPL/msinspect/index.html">msInspect</a></li>
 <li><a href="http://mzmatch.sourceforge.net">mzMatch</a></li>
 <li><a href="http://mzmine.sourceforge.net">MZmine</a></li>
 <li><a href="https://www.openchrom.net">OpenChrom</a></li>
-<li><a href="http://bimsbstatic.mdc-berlin.de/kempa/software/kempaSoftware.html">Maui-VIA</a></li>
 <li><a href="https://code.google.com/p/proteo-suite/">ProteoSuite</a></li>
 <li><a href="http://bio.informatik.uni-jena.de/sirius2/">SIRIUS</a></li>
 </ul>
@@ -52,7 +54,7 @@
 <h3>
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h3>
 
-<p>Please use the <a href="https://github.com/msdk/msdk/graphs/contributors">Github's statistics</a> to see who has contributed to this project so far.</p>
+<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far.</p>
 
 <h3>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h3>
@@ -71,7 +73,7 @@
 <h3>
 <a id="source-codes" class="anchor" href="#source-codes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Source codes</h3>
 
-<p>MSDK source codes are available from our <a href="https://github.com/msdk/msdk">Github repository</a>. To clone the source code tree. you can use this command:</p>
+<p>MSDK source codes are available from our <a href="https://github.com/msdk/msdk">GitHub repository</a>. To clone the source code tree. you can use this command:</p>
 
 <pre><code>$ git clone https://github.com/msdk/msdk.git
 </code></pre>
