--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 
 <pre><code>$ git clone https://github.com/msdk/msdk.git
 </code></pre>
+
+<p><a href="http://maven.apache.org">Apache Maven</a> is required to build MSDK. To perform the build, run the following command in the source code directory:</p>
+
+<pre><code>$ mvn package
+</code></pre>
       </section>
     </div>
 
