Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK?</h3>
+        <h2>
+<a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK?</h2>
 
 <p>MSDK is a Java library of algorithms for processing mass spectrometry data. The goals of the library are to provide a flexible data model with Java interfaces for mass-spectrometry related objects (including raw spectra, processed data sets, identification results etc.) and to integrate the existing algorithms that are currently scattered around various Java-based graphical tools, such as (in alphabetical order):</p>
 
@@ -52,11 +52,6 @@
 <p>MSDK requires Java runtime (JRE) version 1.7 or newer.</p>
 
 <h3>
-<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h3>
-
-<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far.</p>
-
-<h3>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h3>
 
 <p>MSDK binaries and source codes are dual-licensed under either the terms of the <a href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License v1.0</a> as published by the Eclipse Foundation</p>
@@ -65,18 +60,26 @@
 
 <p>under the terms of the GNU <a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">Lesser General Public License version 2.1</a> as published by the Free Software Foundation.</p>
 
+<h2>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h2>
+
+<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far.</p>
+
 <h3>
 <a id="how-to-join-this-project" class="anchor" href="#how-to-join-this-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to join this project</h3>
 
-<p>Please join our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a>.</p>
+<p>Please join our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a> and tell us about your ideas. Contributions to MSDK can be made through GitHub's standard <a href="https://help.github.com/articles/using-pull-requests/">Pull Request</a> mechanism. Before creating a Pull Request, please make sure that you agree with your code being distributed as part of MSDK under the above-mentioned license.</p>
 
-<h3>
-<a id="source-codes" class="anchor" href="#source-codes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Source codes</h3>
+<h2>
+<a id="source-codes" class="anchor" href="#source-codes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Source codes</h2>
 
 <p>MSDK source codes are available from our <a href="https://github.com/msdk/msdk">GitHub repository</a>. To clone the source code tree. you can use this command:</p>
 
 <pre><code>$ git clone https://github.com/msdk/msdk.git
 </code></pre>
+
+<h3>
+<a id="building-the-source-codes" class="anchor" href="#building-the-source-codes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Building the source codes</h3>
 
 <p><a href="http://maven.apache.org">Apache Maven</a> is required to build MSDK. To perform the build, run the following command in the source code directory:</p>
 
