Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <pre><code>$ git clone https://github.com/msdk/msdk.git
 </code></pre>
 
-<p><a href="http://maven.apache.org">Apache Maven</a> is required to build MSDK. To perform the build, run the following command in the source code directory:</p>
+<p><a href="http://maven.apache.org">Apache Maven</a> is required to build MSDK. To compile the source codes, run the following command in the source code directory:</p>
 
 <pre><code>$ mvn package
 </code></pre>
