Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
 </ul>
 
 <h3>
-<a id="platform" class="anchor" href="#platform" aria-hidden="true"><span class="octicon octicon-link"></span></a>Platform</h3>
+<a id="why-we-need-msdk" class="anchor" href="#why-we-need-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why we need MSDK?</h3>
+
+<p>While competition among various algorithms is beneficial for the progress of research, the absence of a common data model and development platform makes it difficult and laborious to evaluate the results and performance of different algorithms. MSDK addresses this issue for the Java platform, while other projects such as <a href="http://open-ms.sourceforge.net">OpenMS</a> or <a href="http://proteowizard.sourceforge.net">ProteoWizard</a> address this issue in C/C++. The advantages of Java are its multi-platform nature and easy, rapid development in a higher-level language compared to C/C++.</p>
+
+<h3>
+<a id="java-version" class="anchor" href="#java-version" aria-hidden="true"><span class="octicon octicon-link"></span></a>Java version</h3>
 
 <p>MSDK requires Java runtime (JRE) version 1.7 or newer.</p>
 
@@ -63,12 +68,17 @@
 <h3>
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h3>
 
-<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far.</p>
+<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far. The <a href="https://help.github.com/articles/using-git-blame-to-trace-changes-in-a-file">Git Blame</a> feature can be used to track the authorship of each individual line in the source files.</p>
 
 <h3>
 <a id="how-to-join-this-project" class="anchor" href="#how-to-join-this-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to join this project</h3>
 
 <p>Please join our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a> and tell us about your ideas. Contributions to MSDK can be made through GitHub's standard <a href="https://help.github.com/articles/using-pull-requests/">Pull Request</a> mechanism. Before creating a Pull Request, please make sure that you agree with your code being distributed as part of MSDK under the above-mentioned license.</p>
+
+<h3>
+<a id="how-to-report-problems" class="anchor" href="#how-to-report-problems" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to report problems</h3>
+
+<p>You can report problems and bugs through the GitHub's <a href="https://github.com/msdk/msdk/issues">Issues tracker</a> or through our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a>. Please do so <a href="http://www.chiark.greenend.org.uk/%7Esgtatham/bugs.html">constructively</a>.</p>
 
 <h3>
 <a id="source-codes" class="anchor" href="#source-codes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Source codes</h3>
