Added a tutorial for contributors.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/msdk">View on GitHub</a>
-
+	  <img src="images/msdk_logo.png" width="90" height="90" align="left" style="background: white; margin-right: 25px;">
           <h1 id="project_title">MSDK</h1>
           <h2 id="project_tagline">Mass Spectrometry Development Kit</h2>
 
@@ -68,12 +68,12 @@
 <h3>
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h3>
 
-<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far. The <a href="https://help.github.com/articles/using-git-blame-to-trace-changes-in-a-file">Git Blame</a> feature can be used to track the authorship of each individual line in the source files.</p>
+<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far. The <a href="https://help.github.com/articles/using-git-blame-to-trace-changes-in-a-file">Git Blame</a> feature can be used to track the authorship of each individual line in the source codes.</p>
 
 <h3>
 <a id="how-to-join-this-project" class="anchor" href="#how-to-join-this-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to join this project</h3>
 
-<p>Please join our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a> and tell us about your ideas. Contributions to MSDK can be made through GitHub's standard <a href="https://help.github.com/articles/using-pull-requests/">Pull Request</a> mechanism. Before creating a Pull Request, please make sure that you agree with your code being distributed as part of MSDK under the above-mentioned license.</p>
+<p>Please join our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a> and tell us about your ideas. Contributions to MSDK can be made through GitHub's standard <a href="https://help.github.com/articles/using-pull-requests/">Pull Request</a> mechanism. If you are not familiar with this mechanism, please read our brief <a href="pull-request-tutorial.html">tutorial</a>. Before creating a Pull Request, please make sure that you agree with your code being distributed as part of MSDK under the above-mentioned license.</p>
 
 <h3>
 <a id="how-to-report-problems" class="anchor" href="#how-to-report-problems" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to report problems</h3>
@@ -83,7 +83,7 @@
 <h3>
 <a id="source-codes" class="anchor" href="#source-codes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Source codes</h3>
 
-<p>MSDK source codes are available from our <a href="https://github.com/msdk/msdk">GitHub repository</a>. To clone the source code tree. you can use this command:</p>
+<p>MSDK source codes are available from our <a href="https://github.com/msdk/msdk">GitHub repository</a>. To clone the source code tree, you can use this command:</p>
 
 <pre><code>$ git clone https://github.com/msdk/msdk.git
 </code></pre>
