Fixed some grammar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </ul>
 
 <h3>
-<a id="why-we-need-msdk" class="anchor" href="#why-we-need-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why we need MSDK?</h3>
+<a id="why-we-need-msdk" class="anchor" href="#why-we-need-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why do we need MSDK?</h3>
 
 <p>While competition among various algorithms is beneficial for the progress of research, the absence of a common data model and development platform makes it difficult and laborious to evaluate the results and performance of different algorithms. MSDK addresses this issue for the Java platform, while other projects such as <a href="http://open-ms.sourceforge.net">OpenMS</a> or <a href="http://proteowizard.sourceforge.net">ProteoWizard</a> address this issue in C/C++. The advantages of Java are its multi-platform nature and easy, rapid development in a higher-level language compared to C/C++.</p>
 
