--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <li><a href="https://code.google.com/p/guineu/">Guineu</a></li>
 <li><a href="http://software.iab.keio.ac.jp/jdamp/">JDAMP</a></li>
 <li><a href="http://maltcms.sourceforge.net">Maltcms</a></li>
+<li><a href="http://sing.ei.uvigo.es/mass-up">Mass-Up</a></li>
 <li><a href="https://bitbucket.org/sbeisken/masscascade/">MassCascade</a></li>
 <li><a href="http://bimsbstatic.mdc-berlin.de/kempa/software/kempaSoftware.html">Maui-VIA</a></li>
 <li><a href="http://proteomics.fhcrc.org/CPL/msinspect/index.html">msInspect</a></li>
