Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK?</h3>
+<a id="-what-is-msdk" class="anchor" href="#-what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a><img src="images/msdk_logo.png" alt="Logo"> What is MSDK?</h3>
 
 <p>MSDK is a Java library of algorithms for processing mass spectrometry data. The goals of the library are to provide a flexible data model with Java interfaces for mass-spectrometry related objects (including raw spectra, processed data sets, identification results etc.) and to integrate the existing algorithms that are currently scattered around various Java-based graphical tools, such as (in alphabetical order):</p>
 
@@ -37,17 +37,18 @@
 <li><a href="http://software.iab.keio.ac.jp/jdamp/">JDAMP</a></li>
 <li><a href="http://maltcms.sourceforge.net">Maltcms</a></li>
 <li><a href="https://bitbucket.org/sbeisken/masscascade/">MassCascade</a></li>
+<li><a href="http://sing.ei.uvigo.es/mass-up/">Mass-Up</a></li>
 <li><a href="http://bimsbstatic.mdc-berlin.de/kempa/software/kempaSoftware.html">Maui-VIA</a></li>
 <li><a href="http://proteomics.fhcrc.org/CPL/msinspect/index.html">msInspect</a></li>
 <li><a href="http://mzmatch.sourceforge.net">mzMatch</a></li>
-<li><a href="http://mzmine.sourceforge.net">MZmine</a></li>
+<li><a href="http://mzmine.github.io">MZmine</a></li>
 <li><a href="https://www.openchrom.net">OpenChrom</a></li>
 <li><a href="https://code.google.com/p/proteo-suite/">ProteoSuite</a></li>
 <li><a href="http://bio.informatik.uni-jena.de/sirius2/">SIRIUS</a></li>
 </ul>
 
 <h3>
-<a id="why-we-need-msdk" class="anchor" href="#why-we-need-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why we need MSDK?</h3>
+<a id="why-do-we-need-msdk" class="anchor" href="#why-do-we-need-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why do we need MSDK?</h3>
 
 <p>While competition among various algorithms is beneficial for the progress of research, the absence of a common data model and development platform makes it difficult and laborious to evaluate the results and performance of different algorithms. MSDK addresses this issue for the Java platform, while other projects such as <a href="http://open-ms.sourceforge.net">OpenMS</a> or <a href="http://proteowizard.sourceforge.net">ProteoWizard</a> address this issue in C/C++. The advantages of Java are its multi-platform nature and easy, rapid development in a higher-level language compared to C/C++.</p>
 
@@ -88,12 +89,12 @@
 <h3>
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h3>
 
-<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far. The <a href="https://help.github.com/articles/using-git-blame-to-trace-changes-in-a-file">Git Blame</a> feature can be used to track the authorship of each individual line in the source files.</p>
+<p>Please use GitHub's <a href="https://github.com/msdk/msdk/graphs/contributors">statistics</a> to see who has contributed to this project so far. The <a href="https://help.github.com/articles/using-git-blame-to-trace-changes-in-a-file">Git Blame</a> feature can be used to track the authorship of each individual line in the source codes.</p>
 
 <h3>
 <a id="how-to-join-this-project" class="anchor" href="#how-to-join-this-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to join this project</h3>
 
-<p>Please join our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a> and tell us about your ideas. Contributions to MSDK can be made through GitHub's standard <a href="https://help.github.com/articles/using-pull-requests/">Pull Request</a> mechanism. Before creating a Pull Request, please make sure that you agree with your code being distributed as part of MSDK under the above-mentioned license.</p>
+<p>Please join our <a href="https://groups.google.com/forum/#!forum/msdk-devel">Google Group</a> and tell us about your ideas. Contributions to MSDK can be made through GitHub's standard <a href="https://help.github.com/articles/using-pull-requests/">Pull Request</a> mechanism. If you are not familiar with this mechanism, please read our brief <a href="pull-request-tutorial.html">tutorial</a>. Before creating a Pull Request, please make sure that you agree with your code being distributed as part of MSDK under the above-mentioned license.</p>
 
 <h3>
 <a id="how-to-report-problems" class="anchor" href="#how-to-report-problems" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to report problems</h3>
@@ -103,7 +104,7 @@
 <h3>
 <a id="source-codes" class="anchor" href="#source-codes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Source codes</h3>
 
-<p>MSDK source codes are available from our <a href="https://github.com/msdk/msdk">GitHub repository</a>. To clone the source code tree. you can use this command:</p>
+<p>MSDK source codes are available from our <a href="https://github.com/msdk/msdk">GitHub repository</a>. To clone the source code tree, you can use this command:</p>
 
 <pre><code>$ git clone https://github.com/msdk/msdk.git
 </code></pre>
