Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="-what-is-msdk" class="anchor" href="#-what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a><img src="images/msdk_logo.png" alt="Logo"> What is MSDK?</h3>
+<a id="what-is-msdk" class="anchor" href="#what-is-msdk" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MSDK?</h3>
 
 <p>MSDK is a Java library of algorithms for processing mass spectrometry data. The goals of the library are to provide a flexible data model with Java interfaces for mass-spectrometry related objects (including raw spectra, processed data sets, identification results etc.) and to integrate the existing algorithms that are currently scattered around various Java-based graphical tools, such as (in alphabetical order):</p>
 
