--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/msdk">View on GitHub</a>
-
+          <img src="images/msdk_logo.png" width="90" height="90" align="left" style="background: white; margin-right: 25px;">
           <h1 id="project_title">MSDK</h1>
           <h2 id="project_tagline">Mass Spectrometry Development Kit</h2>
 
