Updated Maltcms repository and added Maui location

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <ul>
 <li><a href="https://code.google.com/p/guineu/">Guineu</a></li>
 <li><a href="http://software.iab.keio.ac.jp/jdamp/">JDAMP</a></li>
-<li><a href="http://maltcms.sourceforge.net">Maltcms</a></li>
+<li><a href="https://github.com/nilshoffmann/maltcms">Maltcms</a></li>
 <li><a href="https://bitbucket.org/sbeisken/masscascade/">MassCascade</a></li>
 <li><a href="http://sing.ei.uvigo.es/mass-up/">Mass-Up</a></li>
-<li><a href="http://bimsbstatic.mdc-berlin.de/kempa/software/kempaSoftware.html">Maui-VIA</a></li>
+<li><a href="https://github.com/nilshoffmann/maui">Maui</a>, <a href="http://bimsbstatic.mdc-berlin.de/kempa/software/kempaSoftware.html">Maui-VIA</a></li>
 <li><a href="http://proteomics.fhcrc.org/CPL/msinspect/index.html">msInspect</a></li>
 <li><a href="http://mzmatch.sourceforge.net">mzMatch</a></li>
 <li><a href="http://mzmine.github.io">MZmine</a></li>
